# CallOut

./: .gitignore  .replit  DEPLOYMENT.md  QUICKSTART_REPLIT.md  README.md  app.py  pyproject.toml  replit.nix  requirements.txt  run.ps1  run.sh  setup.ps1  setup.sh  test_app.py
static/: script.js  style.css
templates/: index.html
